<resources>
    <string name="app_name">aioapp</string>
    <string name="background_gray">background gray</string>
    <string name="tdlpanel">tdlpanel</string>
    <string name="panelwhite">tdlpanelwhite</string>
    <string name="panel_white" />
    <string name="hello_button">hello_button</string>
    <string name="add_list">add_list</string>
    <string name="todo_sign">todo_sign</string>
    <string name="back_button">back_button</string>
    <string name="view_all">view_all</string>
    <string name="arrow_button">arrow_button</string>
    <string name="tdl_panel">tdl_panel</string>
    <string name="back_button1">back_button</string>
    <string name="hello_button1">hello_button1</string>
    <string name="todo_text">todo_text</string>
    <string name="viewall_button">viewall_button</string>
    <string name="view_all_button">view_all_button</string>
    <string name="show_more_arrow">show_more_arrow</string>
    <string name="add_list_button">add_list_button</string>
    <string name="add_list_button1">add_list_button</string>
    <string name="arrowbtn_bottomsheet" />
    <string name="newtask_text" />
    <string name="task_name" />
    <string name="Location" />
    <string name="mm_dd_year" />
    <string name="cancel_btn_bottomsheet" />
    <string name="add_task_btn_bottomsheet" />
    <string name="logo">logo</string>
    <string name="desc" translatable="false">
                  \u0020 At CYBER-6, we have come up with a development application that can help a person be more productive on their own daily basis. Our platform leverages the latest location-based technology to provide the tools and resources you need with just a click. Unlike some other applications that demand a consistent online connection, CYBER-6 develops an all-in-one production organization application that functions more, even when you are not connected to the internet. As a result, users can still access and manage their daily plans, as well as obtain the information they require.
    </string>
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Notification Channel Description</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_message">Notification Message</string>
</resources>