<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B"
    tools:context=".MainActivity">

    <devs.mulham.horizontalcalendar.HorizontalCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        app:layout_constraintTop_toTopOf="parent"
        app:textColorNormal="#bababa"
        app:textColorSelected="#1B1B1B"
        app:selectedDateBackground="@drawable/selected_box"
        app:selectorColor="#1b1b1b"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="567dp"
        android:layout_height="616dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/tdl_panel"
        app:srcCompat="@drawable/tdlpanel" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="88dp"
        android:padding="16dp"
        android:contentDescription="@string/back_button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        android:background="@drawable/backbutton" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="97dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/hello_button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintVertical_bias="0.468"
        app:srcCompat="@drawable/hello" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/todo_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/todo" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/show_more_arrow"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrow1" />

    <ImageButton
        android:id="@+id/addlistbtn"
        android:layout_width="89dp"
        android:layout_height="82dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/add_list_button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/addlist" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
